# sway-desktop

./: .gitignore  clashd.service  google-chrome.desktop  install.sh  readme.md
desktops/: hyprland.desktop
etc/: fonts.conf  oomd.conf
eww/: .gitignore  battery  eww.scss  eww.yuck  layout  memory  readme.md  volume  workspaces
eww/polling-server/: Cargo.toml
eww/polling-server/src/: constants.rs  cpu.rs  disk.rs  main.rs  memory.rs  network.rs  temperature.rs
rofi/: config.rasi  rofi
shells/fish/: config.fish  fish_plugins  fish_variables
shells/fish/functions/: fish_greeting.fish  fish_prompt.fish  gc.fish  n.fish  wifi.fish  wlc.fish  zzz.fish
sway/: config  sway  toggle_eww.sh
waybar/: config  style.css  waybar
