[package]
name = "polling-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polling-server"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"
debug = true

[profile.bench]
inherits = "release"
debug = true

[profile.flamegraph]
inherits = "release"
debug = true
strip = false
